Created New Stream form and function update

--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -27,7 +27,7 @@
     <br />
     <br />
 
-    <p>Tutors: <a href="new">Click here to create a new stream</a></p>
+    <p>Tutors: <a href="new">create a new stream</a></p>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../socket.io/socket.io.js"></script>
