--- a/views/viewer/viewer.css
+++ b/views/viewer/viewer.css
@@ -7,6 +7,7 @@
 html {
     background-color: gray;
     font-weight: 300;
+    font-family: sans-serif;
     -webkit-font-smoothing: antialiased;
 }
 
