--- a/views/viewer/old-viewer/viewer.html
+++ b/views/viewer/old-viewer/viewer.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
     <meta http-equiv="content-type" content="text/html; charset=windows-1252">
-    <title><%= streamDetails.name %></title>
+    <title>PDF Viewer</title>
     <link href='https://fonts.googleapis.com/css?family=Merienda' rel='stylesheet'>
-    <link rel="stylesheet" href="/viewer/viewer.css">
+    <link rel="stylesheet" href="view.css">
 </head>
 
 <body>
     <div class="container">
         <div id="controller">
-            <span id="download"><a href="/files/<%= streamDetails.file %>">Download slides</a></span>
-            &nbsp; &nbsp;
             <button class="btn" id="prev">Previous</button>
             <button class="btn" id="next">Next</button>
             &nbsp; &nbsp;
@@ -24,8 +21,6 @@
             &nbsp; &nbsp;
             <button class="btn" id="minus">-</button>
             <button class="btn" id="plus">+</button>
-            &nbsp; &nbsp; &nbsp; &nbsp;
-            <span id="viewers"></span>
         </div>
         
         <div id='loadingbar'>
@@ -39,17 +34,12 @@
             <canvas id="the-canvas" style="z-index: 0;"></canvas>
         </div>
     </div>
+    </div>
     
     <script src="//mozilla.github.io/pdf.js/build/pdf.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../socket.io/socket.io.js"></script>
-    <script type="text/javascript">
-        var accessType="<%= type %>";
-        var fileName="<%= streamDetails.file %>";
-        var id="<%= streamDetails.id %>";
-        var currentPage="<%= streamDetails.currentPage %>";
-    </script>
-    <script src="/viewer/viewer.js"></script>
+    <script src="view.js"></script>
 </body>
 
 </html>
