socket port fix for glitch.com

--- a/views/new/new.ejs
+++ b/views/new/new.ejs
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<script src="ejs.js"></script>
-
 <head>
     <meta http-equiv="content-type" content="text/html; charset=windows-1252">
-    <title>PDF Viewer</title>
+    <title>Create New Stream</title>
     <link href='https://fonts.googleapis.com/css?family=Merienda' rel='stylesheet'>
     <link rel="stylesheet" href="new.css">
 </head>
