--- a/views/viewer/viewer.ejs
+++ b/views/viewer/viewer.ejs
@@ -42,7 +42,7 @@
     
     <script src="//mozilla.github.io/pdf.js/build/pdf.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="../socket.io/socket.io.js"></script>
+    <script src="https://jashvanjara-pdf-online.glitch.me/socket.io/socket.io.js"></script>
     <script type="text/javascript">
         var accessType="<%= type %>";
         var fileName="<%= streamDetails.file %>";
