--- a/views/new/new.ejs
+++ b/views/new/new.ejs
@@ -41,5 +41,10 @@
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../socket.io/socket.io.js"></script>
+
+    <script type="text/javascript">
+        var currentFiles="<%= currentFiles %>";
+    </script>
+
     <script src="new.js"></script>
 </body>
